--- a/sinatra/.gitignore
+++ b/sinatra/.gitignore
@@ -1,8 +1,8 @@
 .env
 .bundle
-/db/*.db
-/db/*.sqlite3
-/db/*.sqlite
-/db/*.sqlite3-journal
+ #/db/*.db
+ #/db/*.sqlite3
+ #/db/*.sqlite
+ #/db/*.sqlite3-journal
 .DS_Store
 public/assets
